@@ -1,3 +1,7 @@
 
 lock2key
 
+private messages: $dc->cmd('To', 'pro', 'zz');
+
+min_chat_delay min_cmd_delay
+
